# modrpc

./: Cargo.toml  README.md
crates/modrpc/: Cargo.toml  README.md
crates/modrpc-codegen/: Cargo.toml
crates/modrpc-codegen/src/: ast.rs  db.rs  lib.rs  parse.rs
crates/modrpc-codegen/src/codegen/: mod.rs
crates/modrpc-codegen/src/codegen/js/: mod.rs  project.rs
crates/modrpc-codegen/src/codegen/js/templates/proto/: index.ts  package.json  tsconfig.json
crates/modrpc-codegen/src/codegen/rust/: mod.rs  project.rs
crates/modrpc-codegen/src/codegen/rust/templates/interface/: cargo.toml  lib.rs
crates/modrpc-codegen/src/codegen/rust/templates/server/: cargo.toml
crates/modrpc-codegen/src/codegen/wasm/: mod.rs  project.rs
crates/modrpc-codegen/src/codegen/wasm/templates/rust-wasm-glue/: build.sh  cargo.toml
crates/modrpc-codegen/src/codegen/wasm/templates/ts-wasm-glue/: build.sh  package.json  tsconfig.json
crates/modrpc-executor/: Cargo.toml
crates/modrpc-executor/src/: lib.rs
crates/modrpc-hub/: Cargo.toml
crates/modrpc-hub/src/: app_hub.rs  broadcaster.rs  gloo_websocket.rs  lib.rs  local.rs  tcp.rs  websocket.rs
crates/modrpc/proto/: proto.mproto
crates/modrpc/scripts/: gen-proto.sh
crates/modrpc/src/: context_map.rs  endpoint_proto.rs  flush_batcher.rs  interface_builder.rs  lib.rs  load_balancer.rs  packet_processor.rs  packet_sender.rs  role.rs  role_setup.rs  rt.rs  tcp_client_server.rs  tcp_ingress.rs  tcp_transport.rs  transport.rs  web_ws_client.rs  web_ws_ingress.rs  web_ws_transport.rs  worker.rs  ws_client_server.rs  ws_ingress.rs  ws_transport.rs
crates/modrpcc/: Cargo.toml
crates/modrpcc/src/: main.rs
examples/local-benchmark/: Cargo.toml
examples/local-benchmark/src/: main.rs
examples/p2p-benchmark/: generate.sh  p2p-benchmark.modrpc
examples/p2p-benchmark/client/: Cargo.toml
examples/p2p-benchmark/client/src/: main.rs
examples/p2p-benchmark/p2p-benchmark-modrpc/rust/: Cargo.toml
examples/p2p-benchmark/p2p-benchmark-modrpc/rust/src/: interface.rs  lib.rs  proto.rs
examples/p2p-benchmark/p2p-benchmark-modrpc/rust/src/roles/: mod.rs  p2p_benchmark_client.rs  p2p_benchmark_server.rs
examples/p2p-benchmark/server/: Cargo.toml
examples/p2p-benchmark/server/src/: main.rs
integ-tests/: run.sh
integ-tests/foo-modrpc/rust/: Cargo.toml
integ-tests/foo-modrpc/rust/src/: interface.rs  proto.rs
integ-tests/foo-modrpc/rust/src/roles/: foo_client.rs  foo_server.rs  mod.rs
integ-tests/proto/: foo.modrpc
proto/: std.modrpc
scripts/: gen-proto.sh
std-modrpc/rust/: Cargo.toml
std-modrpc/rust/src/: interface.rs  lib.rs  proto.rs  receive_stream.rs  request_tracker.rs
std-modrpc/rust/src/role_impls/: byte_stream_receiver.rs  byte_stream_sender.rs  mod.rs  multi_byte_stream_receiver.rs  multi_byte_stream_sender.rs  multi_stream_receiver.rs  multi_stream_sender.rs  property_observer.rs  property_owner.rs  request_client.rs  request_server.rs  stream_receiver.rs  stream_sender.rs
std-modrpc/rust/src/roles/: byte_stream_receiver.rs  byte_stream_sender.rs  foo_client.rs  foo_server.rs  multi_byte_stream_receiver.rs  multi_byte_stream_sender.rs  multi_stream_receiver.rs  multi_stream_sender.rs  property_observer.rs  property_owner.rs  request_client.rs  request_server.rs  stream_receiver.rs  stream_sender.rs
