[package]
name = "modrpc"
version = "0.0.2"
edition = "2024"
description = "Runtime for modrpc - a modular RPC framework"
repository = "https://github.com/modrpc-org/modrpc"
keywords = ["rpc"]
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tcp-transport = ["dep:tokio"]
ws-transport = ["dep:tokio-tungstenite"]
web-ws-transport = ["dep:gloo-net"]

[dependencies]
futures-lite = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hashbrown = "0.15"
oneshot = "0.1"
pollster = "0.3"
siphasher = "1"
spin = "0.9"

mproto = "0.2"
modrpc-executor = { version = "0.0", path = "../modrpc-executor" }
bab = "0.0"
thid = "0.0"
burstq = "0.2"
localq = "0.0"
ispawn = "0.0"
probius = "0.0"

tokio = { version = "1", optional = true, features = ["io-util", "net"] }
tokio-tungstenite = { version = "0.27", optional = true }
gloo-net = { version = "0.6", optional = true, default-features = false, features = ["websocket"] }
